# arc-theme-kde

./: .gitignore  README.md  build.sh
kvantum/: README.md
kvantum/Arc/: Arc.kvconfig
kvantum/ArcDark/: ArcDark.kvconfig
kvantum/ArcDarker/: ArcDarker.kvconfig
plasma/look-and-feel/arc-theme-kde/: metadata.desktop
plasma/look-and-feel/arc-theme-kde/contents/: defaults
plasma/look-and-feel/arc-theme-kde/contents/splash/: Splash.qml
src/: CMakeLists.txt  arc.h  arcbutton.cpp  arcbutton.h  arcdecoration.cpp  arcdecoration.h  arcexceptionlist.cpp  arcsettingsdata.kcfg  arcsettingsprovider.cpp  config-arc.h.cmake
src/config/: arcconfigwidget.cpp  arcdecorationconfig.desktop  arcdetectwidget.cpp  arcdetectwidget.h  arcexceptionlistwidget.cpp
src/libbreezecommon/: CMakeLists.txt
windeco/: README.md
windeco/src/: arc.json  arcbutton.cpp  arcbutton.h  arcdecoration.cpp  arcdecoration.h  arcexceptionlist.h  arcsettings.kcfgc  arcsettingsprovider.cpp  arcsettingsprovider.h
windeco/src/config/: arcconfigwidget.cpp  arcconfigwidget.h  arcexceptiondialog.cpp  arcexceptiondialog.h  arcexceptionlistwidget.h  arcexceptionmodel.cpp  arcexceptionmodel.h  arcitemmodel.cpp  arcitemmodel.h  arclistmodel.h
windeco/src/config/ui/: arcconfigurationui.ui  arcdetectwidget.ui  arcexceptiondialog.ui  arcexceptionlistwidget.ui
windeco/src/libbreezecommon/: CMakeLists.txt
yakuake/: README.md
yakuake/KvArcDark/: tabs.skin  title.skin
